--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <EditText
+            android:id="@+id/etext_ptesname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Ptes Name"
+            />
+
+        <EditText
+            android:id="@+id/etext_pteslocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Ptes Location"
+            />
+
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add"/>
+
+        <Button
+            android:id="@+id/btn_display"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Display"/>
+
+        <EditText
+            android:id="@+id/etxt_display"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Data will display here"/>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
