--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:fitsSystemWindows="true">
 
-        <EditText
-            android:id="@+id/etext_ptesname"
+        <LinearLayout
+            android:id="@+id/content_frame"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                android:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar">
+
+            </android.support.v7.widget.Toolbar>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/my_recycler_view"
+                android:scrollbars="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </android.support.v7.widget.RecyclerView>
+
+        </LinearLayout>
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Ptes Name"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:menu="@menu/drawer_view"
+            app:headerLayout="@layout/activity_nav_header"
             />
+    </android.support.v4.widget.DrawerLayout>
 
-        <EditText
-            android:id="@+id/etext_pteslocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Ptes Location"
-            />
 
-        <Button
-            android:id="@+id/btn_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add"/>
 
-        <Button
-            android:id="@+id/btn_display"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Display"/>
-
-        <EditText
-            android:id="@+id/etxt_display"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Data will display here"/>
-
-    </LinearLayout>
-
-</android.support.constraint.ConstraintLayout>
+    
+</LinearLayout>
